--- a/index.html
+++ b/index.html
@@ -700,11 +700,11 @@ mso-header-margin:42.5500pt;
 mso-footer-margin:49.6000pt;
 }
 div.Section0{page:Section0;}</style></head><body style="tab-interval:21pt;text-justify-trim:punctuation;" ><!--StartFragment--><div class="Section0"  style="layout-grid:15.6000pt;" ><h2 style="margin-left:0.0000pt;text-indent:0.0000pt;padding:0pt 0pt 0pt 0pt ;
-mso-pagination:widow-orphan;" ><span><img width="292"  height="66"  src="index.files/index86.png" ></span><b><span style="mso-spacerun:'yes';font-family:&#65533;&#65533;&#65533;&#65533;;font-weight:bold;
+mso-pagination:widow-orphan;" ><span><img width="292"  height="66"  src="https://s21.ax1x.com/2024/12/20/pAOoa6g.png" ></span><b><span style="mso-spacerun:'yes';font-family:&#65533;&#65533;&#65533;&#65533;;font-weight:bold;
 font-size:18.0000pt;mso-font-kerning:0.0000pt;" ><o:p></o:p></span></b></h2><p class=MsoNormal ><span style="mso-spacerun:'yes';font-family:宋体;font-size:10.5000pt;
 mso-font-kerning:1.0000pt;" >&nbsp;</span><span style="mso-spacerun:'yes';font-family:宋体;font-size:10.5000pt;
 mso-font-kerning:1.0000pt;" ><o:p></o:p></span></p><h2 align=center  style="margin-left:0.0000pt;text-indent:0.0000pt;padding:0pt 0pt 0pt 0pt ;
-mso-pagination:widow-orphan;text-align:center;" ><span><img width="1058"  height="278"  src="index.files/index178.png" ></span><b><span style="mso-spacerun:'yes';font-family:宋体;color:rgb(51,51,51);
+mso-pagination:widow-orphan;text-align:center;" ><span><img width="1058"  height="278"  src="https://s21.ax1x.com/2024/12/20/pAOodXQ.png" ></span><b><span style="mso-spacerun:'yes';font-family:宋体;color:rgb(51,51,51);
 letter-spacing:0.0000pt;font-weight:bold;text-transform:none;
 font-style:normal;font-size:18.0000pt;mso-font-kerning:0.0000pt;" >&nbsp;</span></b><b><span style="mso-spacerun:'yes';font-family:宋体;color:rgb(51,51,51);
 letter-spacing:0.0000pt;font-weight:bold;text-transform:none;
@@ -748,7 +748,7 @@ font-style:normal;font-size:18.0000pt;mso-font-kerning:0.0000pt;" ><font face="M
 letter-spacing:0.0000pt;font-weight:bold;text-transform:none;
 font-style:normal;font-size:18.0000pt;mso-font-kerning:0.0000pt;" ><o:p></o:p></span></b></h2><h2 style="margin-left:105.0000pt;mso-para-margin-left:0.0000gd;text-indent:21.0000pt;
 mso-char-indent-count:0.0000;padding:0pt 0pt 0pt 0pt ;mso-pagination:widow-orphan;
-text-align:left;" ><span><img width="1323"  height="428"  src="index.files/index319.png" ></span><b><span style="mso-spacerun:'yes';font-family:宋体;mso-ascii-font-family:&#65533;&#65533;&#65533;&#65533;;
+text-align:left;" ><span><img width="1323"  height="428"  src="https://s21.ax1x.com/2024/12/20/pAOoU1S.png" ></span><b><span style="mso-spacerun:'yes';font-family:宋体;mso-ascii-font-family:&#65533;&#65533;&#65533;&#65533;;
 mso-hansi-font-family:&#65533;&#65533;&#65533;&#65533;;mso-bidi-font-family:&#65533;&#65533;&#65533;&#65533;;font-weight:bold;
 font-size:18.0000pt;mso-font-kerning:0.0000pt;" ><o:p></o:p></span></b></h2><p class=MsoNormal ><span style="mso-spacerun:'yes';font-family:宋体;font-size:10.5000pt;
 mso-font-kerning:1.0000pt;" >&nbsp;</span><span style="mso-spacerun:'yes';font-family:宋体;font-size:10.5000pt;
@@ -771,7 +771,7 @@ letter-spacing:0.0000pt;font-weight:bold;text-transform:none;
 font-style:normal;font-size:18.0000pt;mso-font-kerning:0.0000pt;" ><font face="Minecraft AE" >服务器规则</font></span></b><b><span style="mso-spacerun:'yes';font-family:'Minecraft AE';color:rgb(51,51,51);
 letter-spacing:0.0000pt;font-weight:bold;text-transform:none;
 font-style:normal;font-size:18.0000pt;mso-font-kerning:0.0000pt;" ><o:p></o:p></span></b></h2><h2 align=center  style="margin-left:0.0000pt;text-indent:0.0000pt;padding:0pt 0pt 0pt 0pt ;
-mso-pagination:widow-orphan;text-align:center;" ><span><img width="1058"  height="368"  src="index.files/index497.png" ></span><b><span style="mso-spacerun:'yes';font-family:'Minecraft AE';color:rgb(51,51,51);
+mso-pagination:widow-orphan;text-align:center;" ><span><img width="1058"  height="368"  src="https://s21.ax1x.com/2024/12/20/pAOoYff.png" ></span><b><span style="mso-spacerun:'yes';font-family:'Minecraft AE';color:rgb(51,51,51);
 letter-spacing:0.0000pt;font-weight:bold;text-transform:none;
 font-style:normal;font-size:18.0000pt;mso-font-kerning:0.0000pt;" >&nbsp;</span></b><b><span style="mso-spacerun:'yes';font-family:宋体;color:rgb(51,51,51);
 letter-spacing:0.0000pt;font-weight:bold;text-transform:none;
@@ -783,13 +783,13 @@ letter-spacing:0.0000pt;font-weight:bold;text-transform:none;
 font-style:normal;font-size:18.0000pt;mso-font-kerning:0.0000pt;" ><font face="Minecraft AE" >常用指令</font></span></b><b><span style="mso-spacerun:'yes';font-family:'Minecraft AE';color:rgb(51,51,51);
 letter-spacing:0.0000pt;font-weight:bold;text-transform:none;
 font-style:normal;font-size:18.0000pt;mso-font-kerning:0.0000pt;" ><o:p></o:p></span></b></p><p class=MsoNormal  style="margin-left:105.0000pt;mso-para-margin-left:0.0000gd;text-indent:21.0000pt;
-mso-char-indent-count:0.0000;text-align:left;" ><span><img width="1323"  height="500"  src="index.files/index595.png" ></span><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:&#65533;&#65533;&#65533;&#65533;;
+mso-char-indent-count:0.0000;text-align:left;" ><span><img width="1323"  height="500"  src="https://s21.ax1x.com/2024/12/20/pAOoNp8.png" ></span><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:&#65533;&#65533;&#65533;&#65533;;
 mso-bidi-font-family:'Times New Roman';font-size:10.5000pt;mso-font-kerning:1.0000pt;" ><o:p></o:p></span></p><p class=MsoNormal  style="margin-left:105.0000pt;mso-para-margin-left:0.0000gd;text-indent:21.0000pt;
 mso-char-indent-count:0.0000;text-align:left;" ><span style="mso-spacerun:'yes';font-family:&#718;&#805;;font-size:10.5000pt;
 mso-font-kerning:1.0000pt;" >&nbsp;</span><span style="mso-spacerun:'yes';font-family:&#718;&#805;;font-size:10.5000pt;
 mso-font-kerning:1.0000pt;" ><o:p></o:p></span></p><h3 align=center  style="margin-top:0.0000pt;margin-right:0.0000pt;margin-bottom:6.0000pt;
 margin-left:0.0000pt;text-indent:0.0000pt;padding:0pt 0pt 0pt 0pt ;
-mso-pagination:widow-orphan;text-align:center;background:rgb(248,249,250);" ><span><img width="1400"  height="142"  src="index.files/index687.png" ></span><b><span style="mso-spacerun:'yes';font-family:'Minecraft AE';font-weight:bold;
+mso-pagination:widow-orphan;text-align:center;background:rgb(248,249,250);" ><span><img width="1400"  height="142"  src="https://s21.ax1x.com/2024/12/20/pAOo0mj.png" ></span><b><span style="mso-spacerun:'yes';font-family:'Minecraft AE';font-weight:bold;
 font-size:13.5000pt;mso-font-kerning:0.0000pt;background:rgb(248,249,250);
 mso-shading:rgb(248,249,250);" >&nbsp;</span></b><b><span style="mso-spacerun:'yes';font-family:'Minecraft AE';font-weight:bold;
 font-size:13.5000pt;mso-font-kerning:0.0000pt;background:rgb(248,249,250);
